--- a/censor.html
+++ b/censor.html
@@ -1,4 +1,4 @@
 <textarea id="input"></textarea>
 
-<script type="text/javascript" src='jquery.js'></script>
+<script type="text/javascript" src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
 <script type="text/javascript" src='censor.js'></script>
